--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,6 @@ name = "dame-boy"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+bitfield = "0.15.0"
+zerocopy = { version = "0.7.32", features = ["derive"] }
